[gd_scene load_steps=19 format=3 uid="uid://sfgrfcxf5a3v"]

[ext_resource type="Script" path="res://scenes/advanced-options/TxtOptionsMatrix.gd" id="1_jsx4e"]
[ext_resource type="Texture2D" uid="uid://vceyw8jntod2" path="res://assets/gui/panels.png" id="2_lsnwv"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="3_m5prj"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="4_1hesp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gb82n"]
atlas = ExtResource("2_lsnwv")
region = Rect2(18, 2, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm2rf"]
atlas = ExtResource("3_m5prj")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuoyu"]
atlas = ExtResource("3_m5prj")
region = Rect2(32, 288, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_ptcdk"]
device = -1
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_4mcv5"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_7qfiq"]
events = [SubResource("InputEventKey_ptcdk"), SubResource("InputEventKey_4mcv5")]

[sub_resource type="AtlasTexture" id="AtlasTexture_uqx57"]
atlas = ExtResource("4_1hesp")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuww3"]
atlas = ExtResource("4_1hesp")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5r31"]
atlas = ExtResource("4_1hesp")
region = Rect2(32, 96, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_440vp"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_sws0b"]
events = [SubResource("InputEventKey_440vp")]

[sub_resource type="AtlasTexture" id="AtlasTexture_t4emd"]
atlas = ExtResource("4_1hesp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhltx"]
atlas = ExtResource("4_1hesp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbri5"]
atlas = ExtResource("4_1hesp")
region = Rect2(32, 32, 32, 32)

[node name="MatrixOption" type="MarginContainer"]
offset_right = 304.0
offset_bottom = 160.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_jsx4e")

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="Content"]
layout_mode = 2
texture = SubResource("AtlasTexture_gb82n")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Main" type="MarginContainer" parent="Content"]
layout_mode = 2

[node name="Columns" type="HBoxContainer" parent="Content/Main"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Main" type="VBoxContainer" parent="Content/Main/Columns"]
layout_mode = 2

[node name="TranslationBox" type="HBoxContainer" parent="Content/Main/Columns/Main"]
layout_mode = 2

[node name="TranslationLabel" type="TextureRect" parent="Content/Main/Columns/Main/TranslationBox"]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_mm2rf")
stretch_mode = 2

[node name="TranslationX" type="SpinBox" parent="Content/Main/Columns/Main/TranslationBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in x-axis"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="TranslationY" type="SpinBox" parent="Content/Main/Columns/Main/TranslationBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "enter translation in y-axis"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="MatrixBox" type="HBoxContainer" parent="Content/Main/Columns/Main"]
layout_mode = 2

[node name="MatrixLabel" type="TextureRect" parent="Content/Main/Columns/Main/MatrixBox"]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_vuoyu")
stretch_mode = 2

[node name="Matrix" type="GridContainer" parent="Content/Main/Columns/Main/MatrixBox"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 2

[node name="Matrix11" type="SpinBox" parent="Content/Main/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix12" type="SpinBox" parent="Content/Main/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix21" type="SpinBox" parent="Content/Main/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="Matrix33" type="SpinBox" parent="Content/Main/Columns/Main/MatrixBox/Matrix"]
custom_minimum_size = Vector2(96, 16)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "transformation matrix"
min_value = -1.0
max_value = 2.0
step = 0.001
page = 0.1

[node name="ColorBox" type="HBoxContainer" parent="Content/Main/Columns/Main"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="Content/Main/Columns/Main/ColorBox"]
layout_mode = 2
text = "Color"

[node name="ColorEdit" type="LineEdit" parent="Content/Main/Columns/Main/ColorBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "#aabbccdd"
max_length = 9

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="RemoveButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
tooltip_text = "delete selected rectangle"
shortcut = SubResource("Shortcut_7qfiq")
texture_normal = SubResource("AtlasTexture_uqx57")
texture_pressed = SubResource("AtlasTexture_tuww3")
texture_hover = SubResource("AtlasTexture_n5r31")

[node name="DuplicateButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "duplicate selected rectangle"
shortcut = SubResource("Shortcut_sws0b")
texture_normal = SubResource("AtlasTexture_t4emd")
texture_pressed = SubResource("AtlasTexture_mhltx")
texture_hover = SubResource("AtlasTexture_dbri5")

[connection signal="text_submitted" from="Content/Main/Columns/Main/ColorBox/ColorEdit" to="." method="_on_color_edit_text_submitted"]
[connection signal="pressed" from="Buttons/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Buttons/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
